# xTPU_simulator

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  revision_note.md  taskList.md  test_simulator  tpu_simulator  xTPU_architecture_diagram.drawio
compiler/: CMakeLists.txt
compiler/include/xtpu/IR/: CMakeLists.txt  XTPUDialect.h  XTPUDialect.td  XTPUEnums.h  XTPUEnums.td  XTPUOps.h  XTPUOps.td
compiler/include/xtpu/Transforms/: CMakeLists.txt  Passes.h  Passes.td
compiler/lib/IR/: CMakeLists.txt  XTPUDialect.cpp  XTPUOps.cpp
compiler/lib/Transforms/: CMakeLists.txt  LinalgToXTPU.cpp  XTPUMemoryPlan.cpp  XTPUSchedule.cpp
compiler/tests/: bottleneck_block_i8.onnx  deep_mlp_i8.onnx  double_buffer.mlir  dual_path_network_i8.onnx  dual_pu_broadcast.mlir  encoder_decoder_i8.onnx  gemm_mlp_i8.onnx  gen_test_models.py  gpt_block_i8.onnx  matmul_e2e.mlir  matmul_lower.mlir  mlp_mixer_block_i8.onnx  multi_head_attention_i8.onnx  residual_block_i8.onnx  single_matmul_i8.onnx  test_correctness.py  transformer_attention_i8.onnx  two_layer_mlp.linalg.mlir  two_layer_mlp_i8.onnx
compiler/tools/: CMakeLists.txt
compiler/tools/xtpu-dump/: xtpu_dump.py
compiler/tools/xtpu-import/: xtpu_import.py
compiler/tools/xtpu-opt/: CMakeLists.txt  xtpu-opt.cpp
compiler/tools/xtpu-translate/: xtpu_translate.py
docs/: .$xTPU_architecture_diagram.drawio.bkp  DialectSpec.md  offline_compile_flow.md  verification.md  xTPU_architecture_diagram.drawio
examples/e2e_matmul/: run_demo.sh
include/: commands.hpp  common.hpp  common_types.hpp  control_unit.hpp  engines.hpp  logging.hpp  lpddr5_adapter.hpp  memory.hpp  memory_interface.hpp  perf_counters.hpp  sim_clock.hpp  simulator.hpp  simulator_config.hpp  status_register.hpp  xbin_loader.hpp
include/engines/: engine_base.hpp  idma_engine.hpp  mxu_engine.hpp  processing_unit.hpp  sdma_engine.hpp  vector_engine.hpp
include/memory/: local_memory.hpp  scratchpad.hpp
src/: common_types.hpp  control_unit.cpp  engines.cpp  engines.hpp  lpddr5_adapter.cpp  main.cpp  memory.hpp  simulator.cpp  status_register.hpp
src/engines/: idma_engine.cpp  mxu_engine.cpp  processing_unit.cpp  sdma_engine.cpp  vector_engine.cpp
tests/: test_simulator.cpp  test_xbin_loader.cpp
tools/: xbin_runner.cpp
